--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -3,3 +3,15 @@
 @tailwind components;
 
 @tailwind utilities;
+
+.jg {
+    fill: none;
+    stroke: #41e4bd;
+    stroke-miterlimit: 10;
+    stroke-width: 5px;
+}
+
+*,
+html {
+    scroll-behavior: smooth !important;
+}
